--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.9",
     "@tailwindcss/postcss": "^4.1.4",
+    "@zxing/ngx-scanner": "^19.0.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
