--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/assets"
             ],
             "styles": [
               "node_modules/leaflet/dist/leaflet.css",
